<resources>
    <string name="app_name">Ems-Patient</string>
    <string name="Sign_in">Sign in with App</string>
    <string name="google_sign_in">sign in with google</string>
    <string name="txt_register">creating your account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="Phone_number">enter your phone number</string>
    <string name="continue_txt">Continue</string>
    <string name="title_activity_driver_map">DriverMapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="title_activity_maps">Map</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_header">Navigation header</string>
    <string name="permission_require">Location permission required</string>
    <string name="drivers_not_found">Drivers not found!!</string>
    <string name="not_found_key">Not found driver with key</string>
    <string name="Welcome">Good Afternoon</string>
    <string name="choose_a_saved_location">Choose a saved location</string>
    <string name="where_to">Where to?</string>
    <string name="city_name_empty">City name is empty</string>
    <string name="title_activity_request_driver">Map</string>
    <string name="pay_by_cash">Pay by Cash</string>
    <string name="confirm_driver">Confirm Driver</string>
    <string name="confirm_pickup_spot">Confirm pickup</string>
    <string name="address_demo">Maitighar,kathmandu</string>
    <string name="meet_driver">Here is your driver</string>
    <string name="confirm_pickup">Confirm Pickup</string>
    <string name="finding_your_ride">Finding Your Ambulance</string>
    <string name="token_not_found">Token not found</string>
    <string name="request_driver_failed">Failed to send request</string>
    <string name="no_driver_accepts">Driver not accepting your request</string>
    <string name="trip_not_found">Trip not found with key authentication</string>
    <string name="ambulance_1">ambulance1</string>
    <string name="Car_number_plate_ex">ba 18 cha 9876</string>
    <string name="driver_name_ex">John Wick</string>
    <string name="ascii_dot">■</string>
    <string name="rating_driver">4.4</string>
    <string name="language_example">English, Nepali</string>
    <string name="Notes">Any Special Tips</string>
    <string name="distance">Distance:</string>
    <string name="distance_travelled">10km</string>
    <string name="time">Time:</string>
    <string name="fee">Fare:</string>
    <string name="central_park">Central Park</string>
    <string name="Fare_total">Rs. 100</string>
    <string name="login_txt">Login</string>
</resources>