<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:background="@drawable/user_splash_screen"
        android:layout_height="match_parent"
        android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/Txt_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/uber_move"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/login_txt"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/But_mobile_login"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/holo_blue_bright"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:textColor="@android:color/darker_gray"
                android:text="@string/Sign_in"/>
            <Button
                android:id="@+id/But_login_google"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/holo_blue_bright"
                android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/google_sign_in"/>

        </LinearLayout>

</RelativeLayout>
